@startuml

title __UTIL's Class Diagram__\n

  namespace com.cardy.design {
    namespace util {
      class com.cardy.design.util.MyMarkerView {
          - labels : List<String>
          - tvContent : TextView
          + MyMarkerView()
          + refreshContent()
      }
    }
  }
  

  namespace com.cardy.design {
    namespace util {
      class com.cardy.design.util.MyMarkerViewMultiple {
          - labels : List<String>
          - tvContent : TextView
          + MyMarkerViewMultiple()
          + refreshContent()
      }
    }
  }
  

  namespace com.cardy.design {
    namespace util {
      class com.cardy.design.util.Util {
          {static} + getImagePath()
          {static} - getImagePath()
      }
    }
  }
  

  com.cardy.design.util.MyMarkerView -up-|> com.github.mikephil.charting.components.MarkerView
  com.cardy.design.util.MyMarkerViewMultiple -up-|> com.github.mikephil.charting.components.MarkerView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
